opam-version: "2.0"
maintainer:    "martin@lucina.net"
homepage:      "https://github.com/fabbing/mirage-net-unikraft"
bug-reports:   "https://github.com/fabbing/mirage-net-unikraft/issues"
dev-repo:      "git+https://github.com/fabbing/mirage-net-unikraft.git"
doc:           "https://mirage.github.io/mirage-net-unikraft/"
license:       "ISC"
authors: [
  "Fabrice Buoro <fabrice@tarides.com>"
]
tags: [
  "org:mirage"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml" {>= "5.2.0"}
  "dune" {>= "2.0"}
  "cstruct" {>= "1.0.1"}
  "lwt" {>= "2.4.3"}
  "mirage-net" {>= "3.0.0"}
  "macaddr" { >= "4.0.0"}
  "mirage-unikraft" {>= "1.0.0"}
  "logs" {>= "0.6.0"}
  "metrics"
  "fmt" {>= "0.8.7"}
]
synopsis: "Unikraft implementation of MirageOS network interface"
description:
  "This library implements the MirageOS network interface for Unikraft targets."
